--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,131 @@
-.App {
-  text-align: center;
+body{
+  background: #fff;
+  font-family:  roboto, sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.shop-page-navbar {
   display: flex;
-  flex-direction: column;
+  column-gap: 20px;
+  margin-left: 100px;
+  color: #adb5bd;
+}
+.list{
+  display: flex;
+  /* justify-content: space-between; */
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: 80px 80px 0 80px;
+  cursor: pointer;
+}
+.add-cart{
+margin-left: 800px;
+}
+.heading{
+  font-size: large;
+  margin-left: 20px;
+}
+.shop-style{
+color: white;
+background-color: #202123;
+/* width: 100%; */
+height: 230px;
+text-align: center;
+padding-top: 30px;
+padding-bottom: 30px;
+}
+.shop-style > p:first-child{
+  font-size: 60px;
+margin-bottom: 0;
+font-weight: 550;
+}
+.text{
+  margin-top: 5px;
+  font-size: 20px;
+  color: #adb5bd;
+}
+.cardlist-header{
+margin: 7% 10%;
+height: 340px;
+width: 250px;
+}
+.cardmedia{
+text-align: center;
+background-color: #ced4da;
+height: 170px;
+}
+.cardcontent{
+  text-align: center;
+
+}
+.value{
+margin-top: 0;
+margin-bottom: 10px;
+}
+.pro{
+  font-weight: 600;
+  font-size: 20px;
+  margin: 0;
+}
+.para{
+  margin-top: 0px;
+  padding-top: 40px;
+  color: #83878a;
+  font-size:30px;
+  font-weight: 100;
+}
+.list-cards{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+margin: 70px 100px;
+}
+.sale-button{
+  background-color: black;
   color: white;
+  border-radius: 4px;
+  font-size: 12px;
+  margin-top: 15px;
+  margin-left: 180px;
+ padding-bottom: 0;
 }
-
-.App-link {
-  color: #61dafb;
+.card-action{
+  color: black;
+  background-color: white;
+  height: 40px;
+  width: 110px;
+  border-radius: 4px;
+  margin-left:65px ;
+  font-size: medium;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-action:hover{
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
+.view-option{
+  color: black;
+  background-color: white;
+  height: 40px;
+  width: 110px;
+  border-radius: 4px;
+  margin-left:65px ;
+  font-size: medium;
+  cursor: pointer;
+}
+.view-option:hover{
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
+.star-icon{
+  margin: 0 ;
+  color: rgb(239, 173, 17);
+  font-size: 11px;
+}
+.footer-section{
+margin-top: 60px;
+background-color: #202123;
+color: #fff;
+height: 120px;
+text-align: center;
+}
+.footer{
+  padding: 50px;
 }
